--- a/Gallery.html
+++ b/Gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sikkim</title>
+    <title>Darjeeling</title>
     <!-- MDB -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
 
@@ -60,6 +60,10 @@
             <a href="file:///E:/Titash/Brainware%20University/Semester%202%20Multemedia%20and%20Animation%20practical/Progressive%20web%20lab%202/Wether%20App%201.0/index.html" target="_blank">
             <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">Weather</button>
             </a> 
+            <a href="Form.html" target="_blank">
+              <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">Registration</button>
+            </a> 
+          </div>
 </header>
 <main>
     <div class="banner">
