--- a/index.html
+++ b/index.html
@@ -119,7 +119,26 @@
         </div>
     </div> 
       </section>
-      <br> <br>
+      <br><br>
+      <div class="title">
+        <h2 style="text-align: center; padding-right: 40px;">Darjeeling</h2>
+        </div>
+        <br>
+        <div class="container">
+      <div class="jumbotron">
+        <h3>About Darjeeling</h3>
+      <p>
+        The queen of the hills is a Himalayan city in the Indian state of West Bengal. It is internationally renowed as a tourist
+        destination for its spectactular view of Mt. Kanchandzonga along with its tea industry and the Darjeeling Himalayan
+        Railway,a UNESCO World Heritage site.One can have the view of entire Singalila Range along with Mt.Kanchandzonga,
+        Bhutan Himalaya and a part of Everest range from Darjeeling.The  eye caching valleys,meandering rivers and 
+        of course the lush green tea gardens are the unique features of Darjeeling. 
+        Beside all these the main attractions of this popular hill 
+        stations are Himalayan Mountaineering Institute(HMI), Himalayan Zoo, Tiger Hill, Rock Garden,Batashiya Loop.
+      </p>
+      </div>
+    </div>
+      <br>
     <div class="container">
       <div class="row">
         <div class="col-4"><img src="IMG/DSCN0695.JPG" class="img-fluid" alt="Darjeeling Mall"></div>
@@ -254,7 +273,7 @@
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
-        <span>We are avalable on:</span>
+        <span>FOLLOW US ON:</span>
       </div>
       <!-- Left -->
   
