--- a/Gallery.html
+++ b/Gallery.html
@@ -204,7 +204,7 @@
   <br><br>
   <div class="container">
   <div class="row">
-    <div class="col-4" style="background-color: aqua; border-radius: 5px;">
+    <div class="col-4" style="background-color: lightseagreen; border-radius: 5px;">
       <h6 style="background-color:yellow ; color: black; font-family: sans-serif; font-size: 30px; font-weight: bold; text-align: center; border-radius: 5px; margin-top: 20px; margin-bottom: 20px; border: 1px solid black;">Your Account</h6>
       <form class="row g-3 pt-4" action="Thank you.html">
       <div class="col-md-6">
